--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-website",
   "version": "0.1.0",
+  "homepage": "https://Ygali04.github.io/my-website,
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
@@ -8,6 +9,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
@@ -16,6 +18,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
