--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-website",
   "version": "0.1.0",
-  "homepage": "https://Ygali04.github.io/my-website",
+  "homepage": "https://Ygali04.github.io/",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
@@ -18,7 +18,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "yarn build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
